# quadfeather

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release_notes.md  setup.py
.github/workflows/: publish.yml
quadfeather/: __init__.py  add_sidecars.py  demo.py  download.py  ingester.py  tiler.py
tests/: test_s3.py  test_tiler.py
