[project]
name = "quadfeather"
version = "2.0.0-RC1"
description = "Quadtree tiling from CSV/Apache Arrow for use with deepscatter in the browser."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
]

[project.scripts]
quadfeather = "quadfeather.tiler:cli"
quadfeather-test-data = "quadfeather.demo:main"
quadfeather-sidecars = "quadfeather.add_sidecars:add_sidecars_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
